hot-fix: default exchange rate, css(body overflow hidden), color marks for tokens

--- a/resources/assets/sass/common.sass
+++ b/resources/assets/sass/common.sass
@@ -7,10 +7,6 @@ html, body
 
 body
 	font-family: "Roboto", sans-serif
-	overflow: hidden
-
-.content
-	vissi: none
 
 h1
 	margin-bottom: 10px
